# Kyty

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL-AGENTS.md  README.md
source/agent/: CMakeLists.txt
source/agent/include/Kyty/Agent/: Cli.h
source/agent/src/: Cli.cpp  Main.cpp
source/devtools/: CMakeLists.txt
source/devtools/src/: BundleWriter.cpp  Cli.cpp  DurableFilePosix.cpp  Main.cpp  ProcessLauncherPosix.cpp  SecureRandomPosix.cpp  SharedMappingPosix.cpp  Supervisor.cpp  SyntheticWorker.cpp
source/emulator/: CMakeLists.txt
source/emulator/include/Emulator/: Audio.h  Config.h  Controller.h  Dialog.h  GuestPlatform.h  Network.h
source/emulator/include/Emulator/Agent/: AgentLifecycle.h  AgentServer.h  AgentSubsystem.h  EventRing.h  FrameScore.h  Protocol.h  StallWatch.h
source/emulator/include/Emulator/DevTools/: Runtime.h  RuntimeSubsystem.h
source/emulator/include/Emulator/Graphics/: AttachmentResolutionCohort.h  CommandProcessorSubmissionSlots.h  DebugOverlay.h  DebugStats.h  GpuDeferredDeletionQueue.h  GpuDirtyPageTracker.h  GpuMemoryMaterializationCache.h  GpuSubmissionTracker.h  (+32 more)
source/emulator/lua/: ps4.lua  ps5.lua
source/emulator/src/: Audio.cpp  Config.cpp  Controller.cpp  Dialog.cpp  Kyty.cpp  Log.cpp  Network.cpp
source/emulator/src/Agent/: AgentLifecycle.cpp  AgentServer.cpp  AgentSubsystem.cpp  EventRing.cpp  FrameScore.cpp  Protocol.cpp  StallWatch.cpp
source/emulator/src/DevTools/: Runtime.cpp  RuntimeSubsystem.cpp
source/emulator/src/Graphics/: AttachmentResolutionCohort.cpp  CommandProcessorSubmissionSlots.cpp  DebugOverlay.cpp  DebugStats.cpp  GpuDeferredDeletionQueue.cpp  GpuDirtyPageTracker.cpp  GpuSubmissionCoordinator.cpp  GpuSubmissionPublicationGate.cpp  GpuSubmissionTracker.cpp  Graphics.cpp  GraphicsRender.cpp  GraphicsRun.cpp  GraphicsState.cpp  InternalResolutionPolicy.cpp  InternalResolutionRuntime.cpp  KeyboardInput.cpp  PipelineCacheStore.cpp  Pm4.cpp  ResolutionAliasPolicy.cpp  ResolutionCoordinateTransform.cpp  ResolutionImageCapability.cpp  Shader.cpp  ShaderCoordinateScale.cpp  ShaderParse.cpp  ShaderResolutionUsageCache.cpp  ShaderSpirv.cpp  ShaderTranslationCache.cpp  SpirvBinaryCacheStore.cpp  Tile.cpp  Utils.cpp  VideoOut.cpp  VideoOutFlipLifecycleGate.cpp  VideoOutFlipQueueAdmissionGate.cpp  VideoOutHostAccessGate.cpp  VideoOutMaterializationGate.cpp  VulkanQueueIdentity.cpp  VulkanResolutionCapability.cpp  Window.cpp
source/emulator/src/Kernel/: EventFlag.cpp  EventQueue.cpp  Fiber.cpp  FileSystem.cpp  Memory.cpp  Pthread.cpp  Semaphore.cpp  SyncOnAddress.cpp  Time.cpp
source/emulator/src/Libs/: ApplicationHeap.cpp  Errno.cpp  LibAcm.cpp  LibAmpr.cpp  LibAppContent.cpp  LibAudio.cpp  LibC.cpp  LibCes.cpp  LibContentExport.cpp  LibCoredump.cpp  LibDialog.cpp  LibFont.cpp  LibFontFt.cpp  LibGraphicsDriver.cpp  LibIme.cpp  LibJson2.cpp  LibKernel.cpp  LibKeyboard.cpp  LibMouse.cpp  LibNet.cpp  LibNp.cpp  LibNpCppWebApi.cpp  LibNpTrophy2.cpp  LibPad.cpp  LibPlayGo.cpp  LibRandom.cpp  LibRtc.cpp  LibRudp.cpp  LibSaveData.cpp  LibShare.cpp  LibSystemService.cpp  LibUlt.cpp  LibUserService.cpp  LibVideoOut.cpp  Libs.cpp  Printf.cpp  ProcessEnvironment.cpp
source/emulator/src/Loader/: Elf.cpp  GuestCall.cpp  MissingImport.cpp  MissingImportStubs.cpp  ModuleLoad.cpp  NeighborModulePreload.cpp  RuntimeLinker.cpp  SymbolDatabase.cpp  SystemContent.cpp
source/emulator/src/Validation/: DomainValidators.cpp
source/integration/bringup/: CMakeLists.txt  RunBringUpScenario.cmake  kyty_bringup_integration.cpp
source/integration_test/: CMakeLists.txt  RunAgentProtocolCase.cmake  RunBringUpCase.cmake  RunDomainValidationCase.cmake  RunLibcWideRejection.cmake  RunLoaderCase.cmake  TestAgentWaitReady.py  TestGamesMatrix.py
source/integration_test/src/: AgentProtocolIntegration.cpp  BringUpIntegration.cpp  DomainValidationIntegration.cpp  GraphicsDiagnosticsIntegration.cpp  GuestStackFrameIntegration.cpp  KernelMemoryIntegration.cpp  LibcAllocatorIntegration.cpp  LibcWideIntegration.cpp  LoaderIntegration.cpp
source/lib/DevTools/: CMakeLists.txt
source/unit_test/: CMakeLists.txt
source/unit_test/src/: UnitTest.cpp  UnitTestDisabled.cpp
source/unit_test/src/core/: UnitTestCoreDateTime.cpp  UnitTestCoreMSpace.cpp  UnitTestCoreMemoryAlloc.cpp  UnitTestCoreString.cpp  UnitTestCoreVirtualMemory.cpp
source/unit_test/src/devtools/: UnitTestDevToolsBundle.cpp  UnitTestDevToolsClassifier.cpp  UnitTestDevToolsEventRing.cpp  UnitTestDevToolsExportCatalog.cpp  UnitTestDevToolsLifecycle.cpp  UnitTestDevToolsProgress.cpp  UnitTestDevToolsProtocol.cpp  UnitTestDevToolsSupervisor.cpp
source/unit_test/src/emulator/: UnitTestAgentTools.cpp  UnitTestEmulatorApplicationHeap.cpp  UnitTestEmulatorAttachmentResolutionCohort.cpp  UnitTestEmulatorAudio.cpp  UnitTestEmulatorExactStagingPool.cpp  UnitTestEmulatorFiber.cpp  UnitTestEmulatorGpuDeferredDeletionQueue.cpp  UnitTestEmulatorGpuMemoryRangeQueryCache.cpp  UnitTestEmulatorGpuSubmissionCoordinator.cpp  UnitTestEmulatorGpuSubmissionTracker.cpp  UnitTestEmulatorGraphicsDirtyTracking.cpp  UnitTestEmulatorGraphicsPackets.cpp  UnitTestEmulatorGraphicsState.cpp  UnitTestEmulatorInternalResolutionPolicy.cpp  UnitTestEmulatorInternalResolutionRuntime.cpp  UnitTestEmulatorKernelMemory.cpp  UnitTestEmulatorKernelProcess.cpp  UnitTestEmulatorLibcCxaDynamicCast.cpp  UnitTestEmulatorLibcCxxLocale.cpp  UnitTestEmulatorLibcMemalign.cpp  UnitTestEmulatorLibcPrintf.cpp  UnitTestEmulatorLoaderModuleStart.cpp  UnitTestEmulatorLoaderTls.cpp  UnitTestEmulatorLoaderUnwind.cpp  UnitTestEmulatorModuleLoad.cpp  UnitTestEmulatorNp.cpp  UnitTestEmulatorPad.cpp  UnitTestEmulatorResolutionCoordinateTransform.cpp  UnitTestEmulatorResolutionImageCapability.cpp  UnitTestEmulatorSaveData.cpp  UnitTestEmulatorShaderCoordinateScale.cpp  UnitTestEmulatorShaderResolutionUsageCache.cpp  UnitTestEmulatorShaderTranslationCache.cpp  UnitTestEmulatorSymbolDatabase.cpp  UnitTestEmulatorVideoOutResolution.cpp  UnitTestEmulatorVulkanQueueIdentity.cpp  UnitTestEmulatorVulkanResolutionCapability.cpp
(+182 files in other folders)
